--- a/app/views/errors/nsfw.html
+++ b/app/views/errors/nsfw.html
@@ -8,7 +8,7 @@
 			</div>
 			<div class="empty-box-column right">
 				<i class="bi_user-lock"></i>
-				<p class="title u-margin-top-20">Necesitas logearte PAJERO</p>
+				<p class="title u-margin-top-20">Necesitas logearte</p>
 				<a class="u-margin-top-30 button am-Signin-button"><i class="bi_interface-circle-plus"></i>&nbsp;&nbsp;LOGEARSE</a>
 			</div>
 		</div>
