--- a/app/views/pages/collections.html
+++ b/app/views/pages/collections.html
@@ -45,15 +45,11 @@
 					</div>
 				</div>
 			</div>
-			<div class="text" style="text-align: center;">
-				<!-- <p class="am-navigation-text category-text">{{data.filters.currentCategory}}</p> -->
-				<span class="am-navigation-text category-text">{{data.filters.currentCategory}}</span>
-				<!-- <span class="am-navigation-text"> > </span> -->
-				<span class="am-navigation-text order-text">{{data.filters.currentOrder}}</span>
-				<!-- <p class="am-navigation-text search-text hide">incas</p> -->
-				<span class="am-navigation-text search-text hide"></span>
-				<!-- <p class="am-navigation-text featured-text hide">AM</p> -->
-				<span class="am-navigation-text featured-text hide"></span>
+			<div class="text navigation" style="text-align: center;">
+				<span class="am-navigation-text uppercase category-text"></span>
+				<span class="am-navigation-text uppercase order-text"></span>
+				<span class="am-navigation-text uppercase search-text hide"></span>
+				<span class="am-navigation-text uppercase featured-text hide"></span>
 			</div>
 			<div class="filter right" data-state="closed">
 				<div class="am-Select">
