--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -211,7 +211,7 @@
 			<div class="invitation" style="background-image: url('/img/invitation.png');">
 				<div class="inner">
 					<p>Tú puedes ser el próximo</p>
-					<a href="#">UNETE</a>
+					<a href="/auth/signup">UNETE</a>
 				</div>
 			</div>
 		</div>
