--- a/app/views/user/account/password.html
+++ b/app/views/user/account/password.html
@@ -23,7 +23,7 @@
 							<!-- <a href="#">Administración de cuenta</a> -->
 						</ul>
 					</div>
-					<div class="am-Filter-item">
+					<!-- <div class="am-Filter-item">
 						<header class="am-Filter-header">
 							<i class="fa fa-bars"></i><p>Tienda en línea</p>
 						</header>
@@ -32,20 +32,20 @@
 						<ul class="am-Filter-subOptions">
 							<a href="#">Quiero abrir mi tienda</a>
 						</ul>
-					</div>
+					</div> -->
 				</div>
 
 				<div class="am-profile-box grid-container u-margin-top-20">
-					<form class="complete-form">
+					<form class="password-form">
 						<div class="grid-100" style="clear: inherit;">
 							<p class="title" style="padding-top: 0;">Nueva contraseña</p>
 							<input class="input" type="password" name='password' required placeholder="Ingresa tu nueva contraseña"/>
 							<p class="title">Repite nuevamente</p>
-							<input class="input" type="password" name='re-password' required placeholder="Ingresa nuevamente tu nueva contraseña"/>
+							<input class="input" type="password" name='rePassword' required placeholder="Ingresa nuevamente tu nueva contraseña"/>
 						</div>
 
-						<div class="grid-100 mobile-grid-100">
-							<button class="button save u-margin-top-30" data-color="green">GUARDAR CAMBIOS</button>
+						<div class="grid-100 save mobile-grid-100">
+							<button class="button u-margin-top-30" data-color="green">GUARDAR CAMBIOS</button>
 						</div>
 
 						<div class="grid-100 save-loading hide mobile-grid-100">
@@ -62,42 +62,10 @@
 {% block scripts %}
 	<script>
 		$(function() {
+			new APP.AccountPasswordScreen();
 			$('.account-title').click(function () {
 				$('.am-Filter.account.mobile').toggleClass('visible')
-			})
+			});
 		});
 	</script>
 {% endblock %}
-
-
-	<!-- <div class="am-profile">
-
-		<div class="single-tabs" style="max-width: 580px; margin: auto;">
-		  <a href="/user/{{user.username}}/account/" class="single-tab" style="padding: 10px;">
-		    <p style="padding: 5px;">DATOS</p>
-		  </a>
-		  <a href="/user/{{user.username}}/account/password" class="single-tab selected" style="padding: 10px;">
-		    <p style="padding: 5px;">PASSWORD</p>
-		  </a>
-		</div>
-
-		<div class="am-profile-box grid-container">
-			<form class="complete-form">
-				<div class="grid-100">
-
-					<p class="title">Nuevo password</p>
-					<input class="input" type="password" name='password' required placeholder="Ingresa tu nuevo password"/>
-					<p class="title">Repetir password</p>
-					<input class="input" type="password" name='re-password' required placeholder="Repite tu nuevo password"/>
-				</div>
-
-				<div class="grid-100 mobile-grid-100">
-					<button class="button save u-margin-top-30" data-color="green">GUARDAR CAMBIOS</button>
-				</div>
-
-				<div class="grid-100 save-loading hide mobile-grid-100">
-					<button class="button u-margin-top-30" data-color="green"><i class="load fa fa-spinner"></i></button>
-				</div>
-			</form>
-		</div>
-	</div> -->
