--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -45,25 +45,11 @@
 					</div>
 				</div>
 			</div>
-			<div class="text" style="text-align: center;">
-
-				<!-- <span class="am-navigation-text link">Lo mas popular</span>
-				<span class="am-navigation-text">> de</span>
-				<span class="am-navigation-text link">Todas las obras</span>
-				<span class="am-navigation-text small">(5,232 obras)</span> -->
-
-				<!-- <span class="am-navigation-text link">Lo mas valorado</span>
-				<span class="am-navigation-text">> de</span>
-				<span class="am-navigation-text link">Fotografia</span>
-				<span class="am-navigation-text">: "</span>
-				<span class="am-navigation-text">Inca</span>
-				<span class="am-navigation-text">"</span>
-				<span class="am-navigation-text small">(2,232 obras)</span> -->
-
-				<span class="am-navigation-text category-text">{{data.filters.currentCategory}}</span>
-				<span class="am-navigation-text order-text">{{data.filters.currentOrder}}</span>
-				<span class="am-navigation-text search-text hide"></span>
-				<span class="am-navigation-text featured-text hide"></span>
+			<div class="text navigation" style="text-align: center;">
+				<span class="am-navigation-text uppercase category-text"></span>
+				<span class="am-navigation-text uppercase order-text"></span>
+				<span class="am-navigation-text uppercase search-text hide"></span>
+				<span class="am-navigation-text uppercase featured-text hide"></span>
 			</div>
 			<div class="filter right" data-state="closed">
 				<div class="am-Select">
