--- a/app/views/partials/elements/feed-work-created.html
+++ b/app/views/partials/elements/feed-work-created.html
@@ -4,7 +4,13 @@
       <a href="/user/<%=User.username%>" class="user">
         <img src="<%= User.photo %>">&nbsp;&nbsp;&nbsp;
         <div>
-          <p class="uppercase"><%= User.fullname %></p>
+          <p class="uppercase">
+            <% if(User.typeName === 1) { %>
+              <%= User.fullname %>
+            <% } else { %>
+              <%= User.pseudonimo %>
+            <% } %>
+          </p>
           <% if(verb === 'create-work') { %>
             <p class="u-margin-top-5">ha subido una obra</p>
           <% } else { %>
@@ -17,10 +23,8 @@
         <p><%=formatDate(createdAt)%></p>&nbsp;&nbsp;&nbsp;
         <% if(verb === 'create-work') { %>
           <i class="bi_interface-plus"></i>
-          <i class="bi_interface-enlarge"></i>
         <% } else { %>
           <i class="bi_ecommerce-diamon"></i>
-          <i class="bi_interface-enlarge"></i>
         <% } %>
       </div>
     </header>
