--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3542,6 +3542,20 @@ white = #fff
 	&-column.right
 		flex 2
 		padding 30px 30px
+		.nsfw
+			font-family: 'Montserrat',sans-serif;
+			font-weight bold
+			font-size 17px
+			color #0c0c0c
+			height 65px
+			width 65px
+			border-radius 50%
+			border solid 2px #0c0c0c
+			display flex
+			margin auto
+			align-items center
+			justify-content center
+
 
 	&-column.padlock
 		flex 2
