--- a/app/views/errors/nsfw.html
+++ b/app/views/errors/nsfw.html
@@ -2,6 +2,31 @@
 
 {% block elements %}
 
+
+	<div class="private-view">
+		<div class="empty-box" style="max-width: 1000px;">
+			<div class="empty-box-column padlock" style="background-image: url('/img/candadaso.png')">
+				<!-- <img src="/img/candadaso.png"> -->
+			</div>
+			<div class="empty-box-column right">
+
+				<!-- <i class="bi_user-lock"></i> -->
+				<p class="nsfw">NSFW</p>
+
+				<p class="title u-margin-top-20">Lo sentimos no puedes ver esta obra :( pues es Not Safe For Work</p>
+				<p class="subtitle u-margin-top-20">Pero existen 5000 obras que son públicas esperando a ser descubiertas por tí</p>
+
+				<!-- <a href="#" class="u-margin-top-30 button"><i class="bi_interface-circle-plus"></i>&nbsp;&nbsp;DESCRUBRIR OBRAS</a> -->
+
+				<a class="am-Signin-button" style="margin-top: 30px; margin-bottom: 50px; text-decoration: none;">
+					<i class="bi_user-single-a"></i> INGRESAR
+				</a>
+
+			</div>
+		</div>
+	</div>
+
+<!--
 	<div class="private-view">
 		<div class="empty-box" style="max-width: 1000px;">
       <div class="empty-box-column padlock" style="background-image: url('https://pbs.twimg.com/profile_images/419387075406733312/-PWwQAPl.jpeg')">
@@ -12,6 +37,6 @@
 				<a class="u-margin-top-30 button am-Signin-button"><i class="bi_interface-circle-plus"></i>&nbsp;&nbsp;LOGEARSE</a>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 {% endblock %}
