add selected class in header menu

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -571,6 +571,8 @@ white = #fff
 		a
 			color charcoal-grey
 			margin-left 25px
+			&.selected
+				text-decoration underline
 	.socials
 		margin-left 20px
 		.upload
