--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -24,7 +24,7 @@
 				<div class="am-Header-new-right">
 						<ul class="options">
               {% if user %}
-                <a href="/feed">ART FEED</a>
+                <a class="selected" href="/feed">ART FEED</a>
               {% endif %}
 							<a href="/works/category/all/page-1/?order=popularity">OBRAS</a>
 							<a href="/users/specialty/all/page-1?order=popularity">ARTISTAS</a>
