add error class to account inputs

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2116,7 +2116,8 @@ white = #fff
 		color #333
 		font-size 14px
 		background white
-
+		&.error
+			border: solid 1px #d0021b
 	.select
 		padding 12px 15px
 
