delete search in mobile menu

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -54,10 +54,10 @@
 
 	<div class="body">
 		<div class="left-mobile-menu">
-			<div class="am-Search-input2">
-				<input type="text" placeholder="Busca obras y artistas" />
+			<!-- <div class="am-Search-input2">
+				<input type="text" placeholder="Busca obras y artistas"/>
 				<i class="bi_interface-search search-btn"></i>
-			</div>
+			</div> -->
 			<table class="options u-margin-top-10">
 				<tr>
 					<td></td>
