--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -662,14 +662,17 @@ white = #fff
 		box-sizing border-box
 		transform: translateX(-100%);
 		transition transform .3s
+		overflow: hidden;
 		.am-Search-input2
 			min-width auto
+			overflow hidden
 			i
 				background #eee
 				color #333
 			input
 				border none
 				border-right solid 1px #333
+				box-sizing border-box
 		.options
 			font-family 'Montserrat', sans-serif
 			font-size 13px
