private works fixed

--- a/app/views/user/work/edit.html
+++ b/app/views/user/work/edit.html
@@ -52,7 +52,7 @@
 				<div class="switch u-margin-top-10">
 					<p class="title">Público</p>
 					<span class="value">On</span>
-					<input type="checkbox" name="public" id="public" checked/>
+					<input type="checkbox" name="public" id="public"/>
 					<label for="public">
 						<div class="am-Switch-button">
 							<i class="fa fa-bars"></i>
