--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -1,5 +1,5 @@
 {% extends '../partials/base.html' %}
-
+{% set path = 'feed' %}
 {% block elements %}
 
 	<a id="go-collection-modal" href="#collection-modal"></a>
