--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -1,6 +1,6 @@
-,{% extends '../partials/base.html' %}
+{% extends '../partials/base.html' %}
 
-{% set path = 'discover-works' %}
+{% set path = 'works' %}
 
 {% block elements %}
 
