--- a/app/views/pages/collections.html
+++ b/app/views/pages/collections.html
@@ -1,6 +1,6 @@
 {% extends '../partials/base.html' %}
 
-{% set path = 'discover-collections' %}
+{% set path = 'collections' %}
 
 {% block elements %}
 
