--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -24,11 +24,11 @@
 				<div class="am-Header-new-right">
 						<ul class="options">
               {% if user %}
-                <a class="selected" href="/feed">ART FEED</a>
+                <a href="/feed" class="feed-menu">ART FEED</a>
               {% endif %}
-							<a href="/works/category/all/page-1/?order=popularity">OBRAS</a>
-							<a href="/users/specialty/all/page-1?order=popularity">ARTISTAS</a>
-							<a href="/collections/category/all/page-1?order=popularity">COLECCIONES</a>
+							<a href="/works/category/all/page-1/?order=popularity" class="works-menu">OBRAS</a>
+							<a href="/users/specialty/all/page-1?order=popularity" class="users-menu">ARTISTAS</a>
+							<a href="/collections/category/all/page-1?order=popularity" class="collections-menu">COLECCIONES</a>
 						</ul>
 					{% if user %}
 						<ul class="socials">
