--- a/app/views/errors/401.html
+++ b/app/views/errors/401.html
@@ -14,7 +14,7 @@
 				<p class="title u-margin-top-20">Lo sentimos no puedes ver esta obra :( pues está en modo privado</p>
 				<p class="subtitle u-margin-top-20">Pero existen 5000 obras que son públicas esperando a ser descubiertas por tí</p>
 
-				<a href="#" class="u-margin-top-30 button"><i class="bi_interface-circle-plus"></i>&nbsp;&nbsp;DESCRUBRIR OBRAS</a>
+				<a href="/works/category/all/page-1/" class="u-margin-top-30 button"><i class="bi_interface-circle-plus"></i>&nbsp;&nbsp;DESCRUBRIR OBRAS</a>
 
 			</div>
 		</div>
