--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -81,11 +81,11 @@
 				</tr>
 				<tr>
 					<td><i class="bi_interface-plus"></i></td>
-					<td><a href="/user/{{user.username}}/work/add">SUBIR</a></td>
+					<td><a href="/user/{{user.username}}/work/add">SUBIR OBRA</a></td>
 				</tr>
 				<tr>
 					<td><i class="bi_interface-bell-a"></i></td>
-					<td><a href="/user/{{user.username}}/notifications">NOTIFICACIONES <span>29</span></a></td>
+					<td><a href="/user/{{user.username}}/notifications">NOTIFICACIONES</a></td>
 				</tr>
 			</table>
 		</div>
@@ -101,7 +101,7 @@
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="/user/{{user.username}}/work/add">DATOS DE PERFIL</a></td>
+					<td><a href="/user/{{user.username}}/work/add">SUBIR OBRA</a></td>
 				</tr>
 				<tr>
 					<td></td>
