add social links

--- a/app/styles/texts.styl
+++ b/app/styles/texts.styl
@@ -97,6 +97,8 @@
 	font-family 'Montserrat', sans-serif
 	font-size 13px
 	color rgba(white, .56)
+	a
+		color rgba(white, .56)
 
 .am-report-text
 	font-family 'Montserrat', sans-serif
