--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -47,20 +47,20 @@
 						<table class="am-Footer-list">
 						  <tr>
 						    <td class="am-Footer-item-text social"><i class="fa fa-facebook"></i></td>
-						    <td class="am-Footer-item-text">Facebook</td>
+						    <td class="am-Footer-item-text"><a href="https://www.facebook.com/artemanifiesto">Facebook</a></td>
 						  </tr>
 						  <tr>
 						    <td class="am-Footer-item-text social"><i class="fa fa-twitter"></i></td>
-						    <td class="am-Footer-item-text">Twitter</td>
+						    <td class="am-Footer-item-text"><a href="https://twitter.com/artemanifiesto">Twitter</a></td>
 						  </tr>
 						  <tr>
 						    <td class="am-Footer-item-text social"><i class="fa fa-instagram"></i></td>
-						    <td class="am-Footer-item-text">Instagram</td>
+						    <td class="am-Footer-item-text"><a href="https://www.instagram.com/artemanifiesto/">Instagram</a></td>
 						  </tr>
-						  <tr>
+						  <!-- <tr>
 						    <td class="am-Footer-item-text social" style="padding-bottom: 0;"><i class="fa fa-rss"></i></td>
 						    <td class="am-Footer-item-text" style="padding-bottom: 0;">RSS</td>
-						  </tr>
+						  </tr> -->
 						</table>
 					</div>
 					<div class="footer-suscribe">
