--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -192,7 +192,7 @@
 	                <i class="bi_misc-cube"></i>
 	              </div>
 	              <div class="single-tab menu-item" data-name='reviews'>
-	                <p>REVIEWS</p>
+	                <p>COMENTARIOS</p>
 	                <span>{{reviews.length}}</span>
 	              </div>
 	              <div class="single-tab menu-item" data-name='tags'>
@@ -264,7 +264,7 @@
 	<div class="grid-container reviews-container {% if currentPath !== 'reviews' %} hide {% endif %}">
 	  <div class="grid-100">
 	    <div class="reviews">
-	      <p class="title" style="margin-top: 30px;">Reviews &nbsp;&nbsp;<span>{{reviews.length}}</span></p>
+	      <p class="title" style="margin-top: 30px;">Comentarios &nbsp;&nbsp;<span>{{reviews.length}}</span></p>
 	      <div class="u-separator"></div>
 	      <div class='reviews-items-container'>
 	      </div>
@@ -280,7 +280,7 @@
 	      	</div>
         {% else %}
         	<p class="empty-profile-text  empty-message bare-message u-margin-top-30" style="display: block;">
-        		<a class="login-review">Logeate, para agregar review</a>
+        		<a class="login-review">Logeate, para agregar comentario</a>
         	</p>
         {% endif %}
 	    </div>
